--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1443,6 +1443,11 @@ select {
     border-radius: 0.5rem;
   }
 
+  .sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1475,6 +1480,11 @@ select {
   }
 }
 @media (min-width: 1024px) {
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 
   .lg\:px-8 {
     padding-left: 2rem;
