--- a/public/css/app.css
+++ b/public/css/app.css
@@ -862,11 +862,6 @@ select {
 .shrink-0 {
   flex-shrink: 0;
 }
-.border-spacing-1 {
-  --tw-border-spacing-x: 0.25rem;
-  --tw-border-spacing-y: 0.25rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
-}
 .origin-top {
   transform-origin: top;
 }
@@ -891,6 +886,11 @@ select {
 }
 .cursor-default {
   cursor: default;
+}
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 .list-inside {
   list-style-position: inside;
@@ -984,13 +984,6 @@ select {
 }
 .border-t-0 {
   border-top-width: 0px;
-}
-.border-double {
-  border-style: double;
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .border-gray-100 {
   --tw-border-opacity: 1;
@@ -1097,6 +1090,9 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 .pb-3 {
   padding-bottom: 0.75rem;
